--- a/assets/css/styles-page1.css
+++ b/assets/css/styles-page1.css
@@ -35,6 +35,7 @@ section {
   text-decoration: underline;
   text-transform: uppercase;
   margin-bottom: 10px;
+  margin-top: 100px;
 }
 .text-section {
   line-height: 30px;
