--- a/assets/css/styles-page1.css
+++ b/assets/css/styles-page1.css
@@ -8,6 +8,8 @@
 
 .content-section {
   padding: 20px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   height: 100%;
 }
 section {
@@ -35,7 +37,6 @@ section {
   text-decoration: underline;
   text-transform: uppercase;
   margin-bottom: 10px;
-  margin-top: 100px;
 }
 .text-section {
   line-height: 30px;
