--- a/assets/css/styles-page1.css
+++ b/assets/css/styles-page1.css
@@ -1,11 +1,17 @@
+:root {
+  --bg-primary: rgb(15, 15, 15);
+}
 .bg-screen {
-  background-image: url("../imgs/tlou/wallpaper.webp");
+  background-image: url("../imgs/tlou/wallpaper.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   height: 80vh;
 }
-
+.bg-shadow-bottom-to-top {
+  background-image: linear-gradient(to top, var(--bg-primary) 1%, transparent);
+  height: 100%;
+}
 .content-section {
   padding: 20px;
   padding-top: 100px;
@@ -20,14 +26,9 @@ section {
   height: max-content;
 }
 .content-sipnose-image {
-  background-image: url("../imgs/tlou/the-last-of-us-game-800x450.webp");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   height: 100%;
 }
 .content-sipnose {
-  background-image: linear-gradient(to right, black 10%, rgb(0, 0, 0, 0));
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,6 +43,7 @@ section {
   line-height: 30px;
   font-size: 1rem;
   width: 50%;
+  font-family: "Roboto", sans-serif;
 }
 
 .color-red {
@@ -61,7 +63,7 @@ section {
 /*SECTION PERSONAGENS*/
 
 .section-personagens {
-  background-color: rgb(15, 15, 15);
+  background-color: var(--bg-primary);
   height: max-content !important;
 }
 .content-personagens {
@@ -153,6 +155,7 @@ section {
   height: 100px;
   font-size: 0.8rem;
   line-height: 20px;
+  font-family: "Roboto", sans-serif;
 }
 .container-personagens .personagem .personagem-content h3 {
   margin-bottom: 10px;
@@ -160,8 +163,8 @@ section {
 
 @media only screen and (max-width: 600px) {
   .bg-screen {
-    background-size: contain;
-    background-position: right;
+    background-size: cover;
+    background-position: center;
     height: 25vh;
   }
   .text-section {
@@ -197,27 +200,6 @@ section {
   cursor: pointer;
 }
 
-/*SECTION FUNGO*/
-
-.section-fungo {
-  height: fit-content;
-}
-
-.content-fungo-image {
-  background-image: url("../imgs/tlou/fungo.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: right;
-  height: 100%;
-}
-.content-fungo {
-  background-image: linear-gradient(to right, black 55%, rgb(0, 0, 0, 0));
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  text-align: left;
-}
-
 /*SECTION ESTAGIOS*/
 
 .section-estagios {
@@ -227,16 +209,4 @@ section {
 .infectados {
   grid-template-columns: repeat(4, 330px);
   margin-top: 50px;
-}
-
-@media only screen and (max-width: 600px) {
-  .content-fungo-image {
-    background-image: url("../imgs/tlou/fungo.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-  }
-  .content-fungo {
-    background-image: linear-gradient(to bottom, black 70%, rgb(0, 0, 0, 0));
-  }
 }
