--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -19,8 +19,9 @@
   text-decoration: none;
   color: black;
   padding: 10px 0 10px 0;
+  font-family: var(--font-roboto);
 }
-.menu-nav ul .button-compre {
+.menu-nav ul .button-comprar {
   color: white;
   width: fit-content;
   padding: 5px 15px 5px 15px;
