--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -16,3 +16,38 @@ footer {
   width: 150px;
   margin-bottom: 20px;
 }
+footer .menu-footer {
+  margin-bottom: 15px;
+}
+footer .menu-footer ul {
+  list-style: none;
+  display: flex;
+}
+
+.menu-footer ul {
+  list-style: none;
+  display: flex;
+  font-family: "Roboto", sans-serif;
+}
+.menu-footer ul li {
+  padding: 5px 10px 5px 10px;
+  transition: border 200ms linear;
+  border: 2px solid transparent;
+}
+.menu-footer ul li:hover {
+  border-bottom: 2px solid black;
+}
+.menu-footer ul a {
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+}
+@media only screen and (max-width: 600px) {
+  .menu-footer ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+  }
+}
