--- a/assets/css/globals.css
+++ b/assets/css/globals.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   background-color: var(--bg-primary);
   color: snow;
